set(CMAKE_BUILD_TYPE Debug)



STRING(REGEX REPLACE "\n" "" EOLIAN_EO_DIR "${EOLIAN_EO_DIR}")
STRING(REGEX REPLACE " " "" EOLIAN_EO_DIR "${EOLIAN_EO_DIR}")
add_definitions(${CLI_COMMON_DEFINITIONS} -DEFL_EO_API_SUPPORT
   -DEOLIAN_EO_DIR="${EOLIAN_EO_DIR}")

add_definitions(-DEFL_EO_API_SUPPORT -DGUI_IMAGES_PATH="${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME_LOWER}")

set(EOLIAN_INCLUDE_FLAG -I \"${EOLIAN_EO_DIR}/eo-1\" -I${CMAKE_CURRENT_SOURCE_DIR})

include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
   ${EFL_PROFILER_INCLUDE_DIRS}
   ${ELEMENTARY_INCLUDE_DIRS}
   ${EVAS_INCLUDE_DIRS}
   ${EO_INCLUDE_DIRS}
   ${EINA_INCLUDE_DIRS}
   ${EET_INCLUDE_DIRS}
   ${EOLIAN_INCLUDE_DIRS}
   )

link_directories (${PC_LIBELEMENTARY_LIBRARY_DIRS})

add_library(clouseau_profiling_viewer SHARED main.c)

target_link_libraries(clouseau_profiling_viewer
   efl_profiler
   ${ELEMENTARY_LIBRARIES}
   ${EVAS_LIBRARIES}
   ${EO_LIBRARIES}
   ${EINA_LIBRARIES}
   ${EET_LIBRARIES}
   ${EOLIAN_LIBRARIES}
   )

INSTALL(TARGETS clouseau_profiling_viewer LIBRARY DESTINATION lib)
